test/compilable/test3254a.d
module test3254a;

import imports.test3254a;

void foo()
{
    bar(0);
}
