test/fail_compilation/fail102.d
void foo()
{
    scope(exit)
	return 0;
}
